Day-3/reviewlabfour/rehabbed/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: badactor
  labels:
    name: badactor
