Day-3/reviewlabfour/rehabbed/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: badcodeone
  namespace: badactor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: badcodeone
  template:
    metadata:
      labels:
        app: badcodeone
    spec:
      containers:
        - image: "badcodeone:v1"
          imagePullPolicy: Never
          name: badcodeone
          ports:
            -
              containerPort: 8311
