Day-3/reviewlabfour/rehabbed/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: badcodeone-ingress
  namespace: badactor
spec:
  backend:
    serviceName: badcodeone
    servicePort: 8311
  rules:
  - host: badcode.one
    http:
      paths:
      - path: /
        backend:
          serviceName: badcodeone
          servicePort: 8311
